HPC-9557: Fix alignment issues for tooltips, also fix sizes, focus and tabindex

--- a/html/modules/custom/hpc_common/css/popover.css
+++ b/html/modules/custom/hpc_common/css/popover.css
@@ -5,6 +5,16 @@
   background-color: transparent;
   color: inherit;
   padding: 0.1rem;
+  font-size: inherit;
+  line-height: 1.15rem;
+  font-weight: normal;
+}
+.cd-button.popover:hover {
+  background: none;
+}
+.cd-button.popover:focus,
+.cd-button.popover:active {
+  background-color: var(--ghi-primary-button-color-hover);
 }
 .tippy-box[role="popover"] {
   background-color: white;
@@ -20,7 +30,7 @@
 }
 .tippy-box[role="popover"] .tippy-content > .title {
   text-align: left;
-  padding: 1rem;
+  padding: 1rem 1rem 0;
   font-weight: bold;
 }
 .tippy-box[role="popover"] .tippy-content > .title svg path {
@@ -30,4 +40,7 @@
   font-weight: normal;
   text-align: left;
   padding: 1rem;
+}
+.tippy-box[role="popover"] .tippy-content > .content ol {
+  margin-block-start: 0;
 }
